# SecureIoT-VIF

./: ANALYSE_RAPPORT.md  CMakeLists.txt  RAPPORT_TESTS.md  RAPPORT_TESTS_V2.md  README.md  README_FINAL.md  generate_demo.sh  requirements.txt  sdkconfig.defaults
components/attestation/: CMakeLists.txt  attestation_manager.c  remote_verifier.c
components/attestation/include/: attestation_manager.h  remote_verifier.h
components/firmware_verification/: CMakeLists.txt  integrity_checker.c  signature_verifier.c
components/firmware_verification/include/: integrity_checker.h  signature_verifier.h
components/secure_element/: CMakeLists.txt  crypto_operations.c  esp32_crypto_manager.c  se_manager.c
components/secure_element/include/: crypto_operations.h  esp32_crypto_manager.h  se_manager.h
components/security_monitor/: CMakeLists.txt  anomaly_detector.c  incident_manager.c
components/security_monitor/include/: anomaly_detector.h  incident_manager.h
components/sensor_interface/: CMakeLists.txt  dht22_driver.c  sensor_manager.c
components/sensor_interface/include/: dht22_driver.h  sensor_manager.h
configs/: quick-start.config
docs/: ARCHITECTURE.md  INSTALLATION.md  INSTALLATION_V2.md  MIGRATION_GUIDE.md  QUICK_START.md  RESEARCH_CONTRIBUTION.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c
tests/: simulator_test.py  test_security.py
tools/: flash_tool.py  requirements.txt
